--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^4.13.0",
     "mongoose": "^8.9.5",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
     "nodemon": "^2.0.20"
   }
