--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^4.13.0",
     "mongoose": "^8.9.5",
