--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "@types/morgan": "^1.9.9",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "@types/webidl-conversions": "^7.0.3",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.1",
     "concurrently": "^7.6.0",
