--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/express-session": "^1.17.5",
@@ -34,6 +35,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.1",
     "concurrently": "^7.6.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
