--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,9 @@
 MONGO_URI=
 JWT_SECRET=
 SESSION_SECRET=
+
+# Cloudinary Configuration
+USE_CLOUDINARY=true
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
