--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "@types/webidl-conversions": "^7.0.3",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.1",
+    "cloudinary": "^2.6.0",
     "concurrently": "^7.6.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
