--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.2.0",
     "react-phone-input-2": "^2.15.1",
+    "react-player": "^2.16.0",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.0.2",
     "sonner": "^1.7.2",
